about page crafted, basic framework

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -1,3 +1,5 @@
 {% load staticfiles %}
-<script src="js/backbone.js"></script>
-<script src="js/underscore.js"></script>
+<script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
+<script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
+<script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/tween.js" %}"></script>
