--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -3,5 +3,6 @@
 <script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
+<script type="text/javascript" src="{% static "js/views/carousel.js" %}"></script>
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tween.js" %}"></script>
