--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <meta charset="UTF-8">
 
+ <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
