--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "css/image-import.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}" />
 
 <!-- NavBar Personal Design -->
