added side navigation

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -2,6 +2,7 @@
 <script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
 <script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/carousel.js" %}"></script>
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
