about page completion, footer added

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -1,4 +1,39 @@
 {% load staticfiles %}
+<div class="footer-wrapper">
+	<div class="six columns">
+		<div class="footer-column">
+			<h4> Contact </h4>
+			General Inquiries: <a class="link-redirect"> info.voyagerconsulting@gmail.com </a> <br>
+			Recruiting: <a class="link-redirect"> recruit.voyagerconsulting@gmail.com </a><br>
+			Business Inquiries: <a class="link-redirect"> business.voyagerconsulting@gmail.com</a>
+		</div>
+	</div>
+	<div class="six columns">
+		<div class="footer-column">
+			<h4> Follow Us </h4>
+			<div class="follow-row">
+				<div class="follow-icon facebook-picture"></div>
+				<div class="follow-link"> <a class="link-redirect" href="https://www.facebook.com/VC.Berkeley"> Facebook </a> </div>
+			</div>
+			<div class="follow-row">
+				<div class="follow-icon linkedin-picture"></div>
+				<div class="follow-link"> <a class="link-redirect" href="https://www.linkedin.com/company/2709676?trk=tyah"> Linkedin </a> </div>
+
+			</div>
+			<div class="follow-row">
+				<div class="follow-icon google-picture"></div>
+				<div class="follow-link"> <a class="link-redirect" href="https://plus.google.com/109217138927076843601/posts"> Google+ </a> </div>
+			</div>
+
+		</div>
+	</div>
+</div>
+<div class="signature-wrapper">
+	<div class="signature">
+		Designed by Felix Liu
+	</div>
+</div>
+
 <script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
 <script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
