fixed careers page, rendering tables

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -34,11 +34,15 @@
 	</div>
 </div>
 
+
 <script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
 <script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/models/data.js" %}"></script>
+<script type="text/javascript" src="{% static "js/models/table_model.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/carousel.js" %}"></script>
+<script type="text/javascript" src="{% static "js/views/table.js" %}"></script>
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tween.js" %}"></script>
