finished about page

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <div class="footer-wrapper">
-	<div class="six columns">
+	<div class="six columns margin-kill">
 		<div class="footer-column">
 			<h4> Contact </h4>
 			General Inquiries: <a class="link-redirect"> info.voyagerconsulting@gmail.com </a> <br>
@@ -8,7 +8,7 @@
 			Business Inquiries: <a class="link-redirect"> business.voyagerconsulting@gmail.com</a>
 		</div>
 	</div>
-	<div class="six columns">
+	<div class="six columns margin-kill">
 		<div class="footer-column">
 			<h4> Follow Us </h4>
 			<div class="follow-row">
