alterations to the home and about pages

--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -10,7 +10,7 @@
 
 <!-- NavBar Personal Design -->
 <div id="navbar-container"></div>
-
+<div class="background-overlay"></div>
 
 <script type="text/template" id="navbar-template">
 	{% include "header/navbar.html" %}
