--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}
 <meta charset="UTF-8">
 
- <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+<link rel="shortcut icon" href="static/images/favicon.ico">
+<title> Voyager Consulting </title>
 <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
