--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -34,6 +34,8 @@
 	</div>
 </div>
 
+<link rel="shortcut icon" href="static/images/favicon.ico">
+
 
 <script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
 <script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
