--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -4,6 +4,32 @@
 	<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/ico" href="../static/images/favicon.ico">
 	<title> Voyager Consulting </title>
+	<!-- Google Analytics Tracking -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-37315759-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<!-- Facebook Pixel  -->
+	<script>(function() {
+		var _fbq = window._fbq || (window._fbq = []);
+		if (!_fbq.loaded) {
+		var fbds = document.createElement('script');
+		fbds.async = true;
+		fbds.src = '//connect.facebook.net/en_US/fbds.js';
+		var s = document.getElementsByTagName('script')[0];
+		s.parentNode.insertBefore(fbds, s);
+		_fbq.loaded = true;
+		}
+		_fbq.push(['addPixelId', '727213910719134']);
+		})();
+		window._fbq = window._fbq || [];
+		window._fbq.push(['track', 'PixelInitialized', {}]);
+	</script>
+	<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=727213910719134&amp;ev=PixelInitialized" /></noscript>
 </head>
 <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
