--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -46,5 +46,5 @@
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tween.js" %}"></script>
 {% if careers %}
-	<script type="text/javascript" src="{% static "js/careers.js" %}"></script>
+	<!-- // <script type="text/javascript" src="{% static "js/careers.js" %}"></script> -->
 {% endif %}
