new spinning logo

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -30,7 +30,7 @@
 </div>
 <div class="signature-wrapper">
 	<div class="signature">
-		Designed by Felix Liu, Savan Patel
+		Felix Liu
 	</div>
 </div>
 
