--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <head>
 	<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" type="image/ico" href="../static/images/favicon.ico">
+	<link rel="shortcut icon" type="image/ico" href="../static/images/Voyager1.svg">
 	<title> Voyager Consulting </title>
 	<!-- Google Analytics Tracking -->
 	<script>
