--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -32,13 +32,16 @@
 	</script>
 	<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=727213910719134&amp;ev=PixelInitialized" /></noscript>
 </head>
-<script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
-<link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script> -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" /> -->
+
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
+
+<!-- <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" /> -->
 <link rel="stylesheet" type="text/css" href="{% static "css/image-import.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}" />
-<!-- <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}" /> -->
-<!-- <link rel="stylesheet" type="text/css" href="http://s3.amazonaws.com/voyagerconsulting/static/css/main.css" /> -->
+
 <!-- NavBar Personal Design -->
 <div id="navbar-container"></div>
 <div class="background-overlay"></div>
