--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -34,10 +34,15 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="{% static "js/underscore.js" %}"></script>
-<script type="text/javascript" src="{% static "js/backbone.js" %}"></script>
-<script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script>
-<script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script>
+
+
+<!-- <script type="text/javascript" src="{% static "js/underscore.js" %}"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
+<!-- <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+<!-- <script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script> -->
 <script type="text/javascript" src="{% static "js/models/data.js" %}"></script>
 <script type="text/javascript" src="{% static "js/models/table_model.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
