--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -34,11 +34,11 @@
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <!-- <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script> -->
-<!-- <link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" /> -->
+<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />	
 
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
+<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" /> -->
 
-<!-- <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" /> -->
+<link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/image-import.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}" />
 
