--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -43,6 +43,9 @@
 <!-- <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script> -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 <!-- <script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script> -->
+<script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js"></script>
+<script type="text/javascript" src="{% static "js/gcal.js" %}"></script>
 <script type="text/javascript" src="{% static "js/models/data.js" %}"></script>
 <script type="text/javascript" src="{% static "js/models/table_model.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
