--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -41,6 +41,7 @@
 <link rel="stylesheet" type="text/css" href="{% static "css/skeleton.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/image-import.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.css" />
 
 <!-- NavBar Personal Design -->
 <div id="navbar-container"></div>
