new images for PLs

--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <head>
 	<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" type="image/png" href="../static/images/Voyager2.png">
+	<link rel="shortcut icon" type="image/png" href="{% static "images/Voyager2.png" %}">
 	<link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<title> Voyager Consulting </title>
 	<!-- Google Analytics Tracking -->
