added cherry picture

--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" src="{% static "js/models/data.js" %}"></script>
 <script type="text/javascript" src="{% static "js/models/table_model.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
+<!-- <script type="text/javascript" src="../static/js/views/navbar.js"></script> -->
 <script type="text/javascript" src="{% static "js/views/carousel.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/table.js" %}"></script>
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
