--- a/voyager/common/footer.html
+++ b/voyager/common/footer.html
@@ -40,20 +40,31 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
-<!-- <script type="text/javascript" src="{% static "js/tweenmax.min.js" %}"></script> -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 <!-- <script type="text/javascript" src="{% static "js/scrollto.min.js" %}"></script> -->
 <script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js"></script>
 <script type="text/javascript" src="{% static "js/gcal.js" %}"></script>
+
+<!-- Collectstatic Javascript -->
 <script type="text/javascript" src="{% static "js/models/data.js" %}"></script>
 <script type="text/javascript" src="{% static "js/models/table_model.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/navbar.js" %}"></script>
-<!-- <script type="text/javascript" src="../static/js/views/navbar.js"></script> -->
 <script type="text/javascript" src="{% static "js/views/carousel.js" %}"></script>
 <script type="text/javascript" src="{% static "js/views/table.js" %}"></script>
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 <script type="text/javascript" src="{% static "js/tween.js" %}"></script>
+
+<!-- Staticfiles for Local Development -->
+<!-- <script type="text/javascript" src="../static/js/models/data.js"></script>
+<script type="text/javascript" src="../static/js/models/table_model.js"></script>
+<script type="text/javascript" src="../static/js/views/navbar.js"></script>
+<script type="text/javascript" src="../static/js/views/carousel.js"></script>
+<script type="text/javascript" src="../static/js/views/table.js"></script>
+<script type="text/javascript" src="../static/js/main.js"></script>
+<script type="text/javascript" src="../static/js/tween.js"></script> -->
+
+
 {% if careers %}
 	<!-- // <script type="text/javascript" src="{% static "js/careers.js" %}"></script> -->
 {% endif %}
