--- a/voyager/common/header.html
+++ b/voyager/common/header.html
@@ -51,6 +51,7 @@
 
 <!-- NavBar Personal Design -->
 <div id="navbar-container"></div>
+        <!-- Header -->
 <div class="background-overlay"></div>
 <script type="text/template" id="navbar-template">
 	{% include "header/navbar.html" %}
